--- a/searchjobs.html
+++ b/searchjobs.html
@@ -65,7 +65,7 @@
             <input type="text" id="keyword" name="keyword" placeholder="e.g., Software Engineer, Marketing Manager">
 
             <label for="location">Location:</label>
-            <input type="text" id="location" name="location" placeholder="e.g., New York, London">
+            <input type="text" id="location" name="location" placeholder="e.g., Kanpur,Uttar Pradesh">
 
             <label for="category">Category:</label>
             <select id="category" name="category">
