--- a/index.html
+++ b/index.html
@@ -1,52 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN to careerhub.com</title>
-    <link rel="stylesheet" href="loginstyle.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body>
-    <div class="img" id="1">
-        <img src="logo.jpg" alt="careerhub">
-    </div> 
+    
     <header>
+        <div class="img" id="1">
+        <img src="logo.jpg" alt="careerhub">
+    </div>
         <div class="title">
-Signin to CareerHub.com
+            Signin to CareerHub.com
         </div>
-        <!-- <div class="description">
-            <h3></h3>
-        </div> -->
+
     </header>
     <div class="form">
         <form action="backend.php">
             <div class="forminput">
                 <div class="name">
-                    USERNAME : <input type="text" name="username" style="width: 10vw; height: 3vh; ">
-                </div> 
+                    USERNAME : <input type="text" name="username" style="width: 15vw; height: 5vh; ">
+                </div>
                 <div class="pass">
-                    PASSWORD : <input type="password" name="password" style="width: 10vw; height: 3vh; "><br>
+                    PASSWORD : <input type="password" name="password" style="width: 15vw; height: 5vh; "><br>
                 </div>
                 <div class="reset">
-                    <a href="#" >Forgot Password?</a><br>
+                    <a href="#">Forgot Password?</a><br>
                 </div>
-                <div class="signup">
-                    <a href="home.html"><input type="button" id="login" value="LOGIN" style="background-color: blue; color: antiquewhite;">
-                    </a>
+                <div class="signup button">
+                    <a href="home.html">LOGIN </a>
                 </div>
-                <div class="google">
-                    <div class="googlelogo">
-                        <i class="fa-brands fa-google"></i>
-                    </div>
-                    Continue with Google
+                <div class="google button">
+                        <i class="fa-brands fa-google" style="margin-right: 1vw;"></i>
+                    <a href="home.html">Continue with Google</a>
                 </div>
-                <div class="phone">
-                    <i class="fa-light fa-phone"></i>
-               <p> Continue with phone</p>
-               </div>
+                <div class="phone button" >
+                    
+                    <i class="fa-light fa-phone" style="margin-right: 1vw;"></i>
+                    <a href="home.html">Continue with phone</a>
+                </div>
             </div>
-        </form> 
+        </form>
     </div>
+    <footer>
+        <div class="copyright">
+            © 1996-2024, careerhub.com, Inc. or its affiliates
+        </div>
+    </footer>
 </body>
+
 </html>
