--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="form">
         <form action="backend.php">
             <div class="forminput">
-                <div class="name">
-                    USERNAME : <input type="text" name="username" style="width: 15vw; height: 5vh; ">
+                <div class="name font">
+                    USERNAME : <input type="text" name="username">
                 </div>
-                <div class="pass">
-                    PASSWORD : <input type="password" name="password" style="width: 15vw; height: 5vh; "><br>
+                <div class="pass font">
+                    PASSWORD : <input type="password" name="password"><br>
                 </div>
                 <div class="reset">
                     <a href="#">Forgot Password?</a><br>
