--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             </button>
         </div>
         <div class="right">
-            <button class="login">
+          <a href="login.html" target="_main">  <button class="login">
                 Login
             </button>
-            <button class="signup">
+          </a>a>
+          <a href="login.html" target="_main">  <button class="signup">
                 Sign Up
             </button>
+          </a>
         </div>
     </div>
     <div class="container">
