--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             </button>
         </div>
         <div class="right">
-          <a href="login.html" target="_main">  <button class="login">
+          <a href="login.html" target="_main">
+              <button class="login">
                 Login
-            </button>
-          </a>a>
-          <a href="login.html" target="_main">  <button class="signup">
+              </button>
+          </a>
+          <a href="login.html" target="_main">
+            <button class="signup">
                 Sign Up
             </button>
           </a>
